test/good/div-before-mul-1.expected.out
test/good/div-before-mul-1.tact:5:21:
  4 |   let c: Int = 2;
> 5 |   let result: Int = a / b * c; // error: Division before multiplication
                          ^
  6 |   return result;
Divide Before Multiply
Help: Consider rearranging the operations: division should follow multiplication
See: https://nowarp.github.io/docs/misti/docs/detectors/DivideBeforeMultiply

test/good/div-before-mul-1.tact:2:3:
  1 | fun test(): Int {
> 2 |   let a: Int = 10;
        ^
  3 |   let b: Int = 3;
Read-only variable
Help: Consider creating a constant instead
See: https://nowarp.github.io/docs/misti/docs/detectors/ReadOnlyVariables

test/good/div-before-mul-1.tact:3:3:
  2 |   let a: Int = 10;
> 3 |   let b: Int = 3;
        ^
  4 |   let c: Int = 2;
Read-only variable
Help: Consider creating a constant instead
See: https://nowarp.github.io/docs/misti/docs/detectors/ReadOnlyVariables

test/good/div-before-mul-1.tact:4:3:
  3 |   let b: Int = 3;
> 4 |   let c: Int = 2;
        ^
  5 |   let result: Int = a / b * c; // error: Division before multiplication
Read-only variable
Help: Consider creating a constant instead
See: https://nowarp.github.io/docs/misti/docs/detectors/ReadOnlyVariables

test/good/div-before-mul-1.tact:5:3:
  4 |   let c: Int = 2;
> 5 |   let result: Int = a / b * c; // error: Division before multiplication
        ^
  6 |   return result;
Read-only variable
Help: Consider creating a constant instead
See: https://nowarp.github.io/docs/misti/docs/detectors/ReadOnlyVariables